Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-92114

Shift-Tab moves focus forward instead of backward in WebEngineView inside QQuickWidget

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.7.2, 6.8.0 FF
    • 5.14.2, 5.15.2
    • WebEngine
    • None
    • Windows 10 20H2
    • Windows
    • 8ba4f74ae (dev), e9521bf02 (6.7)

      Pressing Shift+Tab (aka Backtab) moves focus forward the same way regular Tab does instead of moving it backward. This happens in QML WebEngine when it's used inside QQuickWidget, but doesn't happen if QML is loaded via QQmlApplicationEngine.

      A fully working minimal demo project is attached.

      This could be related to https://bugreports.qt.io/browse/QTBUG-65452 but it still is not fixed

        1. bug_demo.zip
          1 kB
        2. ClickingShiftTab.mp4
          392 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt_webengine_team Qt WebEngine Team
            zoinen Alexander
            Votes:
            3 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes