Set the modifier key to resolve the backtabbing issue in WebEngineQuick

When handling the Qt::Key_Backtab key press event and the event doesn’t
contain a modifier key, specify it as Qt::ShiftModifier, as
Chromium requires this to process backward tabbing.

Fixes: QTBUG-92114
Pick-to: 6.6
Change-Id: I6f59177272a0972a680dd4b247e5df0105644db1
Reviewed-by: Michael Brüning <michael.bruning@qt.io>
(cherry picked from commit 8ba4f74ae76df8b734cc6401e0f05c8e41fc3977)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>